#37: Update UI to FX
	WIP - Working on Menu...

Task-Url: https://github.com/JamzTheMan/maptool/issues/37

Signed-off-by: Jamz <Jamz@Nerps.net>